--- a/style.css
+++ b/style.css
@@ -1,29 +1,32 @@
 body {
-    background-color: white;
+    background-color: black;
+}
+
+.output{
+    background-color: aliceblue;
 }
 
 
 .Calculator_grid{
-    display: grid;
+    display: grid; 
     justify-content: center;
     align-items: center;
     margin-top: 75px;
-
-    
 }
+
 .output{
-    height: 75px;
+    height: 50px;
     border: 2px solid red;
     text-align: right;
     font-size: 3rem;
-    background-color: aliceblue;
 }
 
 .btn{
     text-align: center;
     display: inline-block;
+    margin: 0;
     width: 200px;
-    height: 100px;
+    height: 100px; 
     border: 2px solid red;
     font-size: 3rem;
 
@@ -35,6 +38,22 @@ body {
 .btn-primary{
     width: 404px;
     height: 100px;
+}
+@media only screen and (max-width: 820px) {
+    .btn{
+        width: 50px;
+        height: 50px;
+        font-size: 1rem;
+    }
+    .output{
+        height: 15px;
+        font-size: 1rem;
+    }
+    .btn-primary{
+        width: 104px;
+        height: 50px;
+    }
+    
 }
 
 
