--- a/style.css
+++ b/style.css
@@ -1,57 +1,48 @@
-
-
-.output{
-    background-color: aliceblue;
+body{
+    font-size: 2.5em;
 }
-
-
 .Calculator_grid{
+    position: fixed;
+    bottom: 10px;
+    left: 50%;
+    right: 50%;
     display: grid; 
     justify-content: center;
     align-items: center;
-    margin-top: 75px;
+    grid-template-columns: 200px 200px 200px 200px;
+    grid-template-rows: auto auto auto auto auto auto;
+    height: 600px;
+    margin-bottom: 0px;
+    margin: auto 0px;
+    column-gap: 0px;
+    row-gap: 0px;
 }
-
 .output{
-    height: 75px;
-    border: 2px solid red;
+    grid-column: 1/5;
+    background-color: aquamarine;
     text-align: right;
-    font-size: 3rem;
-}
-
-.btn{
-    text-align: center;
-    display: inline-block;
-    margin: 0;
-    width: 200px;
-    height: 100px; 
+    height: 60px;
+    line-height: 60px;
     border: 2px solid red;
-    font-size: 3rem;
-
-}
-.btn:hover{
-    background-color: red;
-}
-
-.btn-primary{
-    width: 404px;
-    height: 100px;
-}
-@media only screen and (max-width: 820px) {
-    .btn{
-        width: 50px;
-        height: 50px;
-        font-size: 1rem;
-    }
-    .output{
-        height: 25px;
-        font-size: 1rem;
-    }
-    .btn-primary{
-        width: 104px;
-        height: 50px;
-    }
     
 }
-
-
+.all_clear{
+    grid-column: 1/3;
+}
+.equal{
+    grid-column: 3/5;
+}
+.btn{
+    height: 108px;
+    font-size: 2rem;
+    border: 2px solid red;
+}
+.btn:hover{
+    background-color: skyblue;
+    
+}
+@media only screen and (max-width: 820px) {
+    .Calculator_grid{
+        grid-template-columns: 25vw 25vw 25vw 25vw;
+    }
+}
